--- a/portfolio/package.json
+++ b/portfolio/package.json
@@ -16,6 +16,7 @@
     "@fortawesome/vue-fontawesome": "^3.0.8",
     "@tailwindcss/vite": "^4.0.9",
     "@vueuse/core": "^13.0.0",
+    "emailjs-com": "^3.2.0",
     "sweetalert2": "^11.17.2",
     "tailwindcss": "^4.0.9",
     "vue": "^3.5.13",
