--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/vue-fontawesome": "^3.0.8",
+    "@google/generative-ai": "^0.24.0",
     "@tailwindcss/vite": "^4.0.9",
     "@vueuse/core": "^13.0.0",
     "emailjs-com": "^3.2.0",
